src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>